fix(yalb-1440): gap between meta items, duplicate page title in storybook, breadcrumbs

--- a/components/02-molecules/meta/profile-meta/_yds-profile-meta.scss
+++ b/components/02-molecules/meta/profile-meta/_yds-profile-meta.scss
@@ -88,6 +88,7 @@ $break-profile-banner-max: $break-profile-banner - 0.05;
 
   @media (min-width: $break-profile-banner) {
     flex-direction: row-reverse;
+    gap: var(--size-spacing-5);
   }
 }
 
